Fix body scrollbars and update trait change for documents

--- a/enaml/qt/editor/editor.css
+++ b/enaml/qt/editor/editor.css
@@ -4,6 +4,7 @@
 /*----------------------------------------------------------------------------*/
 body {
     background: transparent;
+    overflow: hidden;
 }
 
 .container {
